tests/snapshots/run_file__lam_op2_nested.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/lam_op2_nested.hvm
---
Lazy mode:

λa (+ (* a a) (+ (+ a 2) 3))

Strict mode:

λa (+ (* a a) (+ (+ a 2) 3))
