tests/snapshots/run_file__let_tup_readback.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/let_tup_readback.hvm
---
Lazy mode:

λa let (b, c) = a; (b c)

Strict mode:

λa let (b, c) = a; (b c)
