tests/snapshots/run_file__linearize_match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/linearize_match.hvm
---
λa match a { 0: λb b; 1+c: λd (+ c d) }
