tests/snapshots/run_file__list_resugar.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/list_resugar.bend
---
λa λ* (a 42 λb λ* (b λc λ* (c λd d List/nil) List/nil))
