tests/snapshots/run_file__list_resugar.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/list_resugar.hvm
---
Lazy mode:
[42, [λd d]]

Strict mode:
[42, [λd d]]
