tests/snapshots/run_file__list_reverse_imp.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/list_reverse_imp.bend
---
NumScott:
[1, 2, 3, 4, 5]

Scott:
[1, 2, 3, 4, 5]
