tests/snapshots/run_file__list_take.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/list_take.bend
---
[3, 2]
